test: fixed a test that failed in Windows environment